@@ -120,6 +120,13 @@
                 <version>3.1.2</version> <!-- Use a version compatible with Spring Boot 3.2 and Java 17 -->
                 <configuration>
                     <argLine>${surefire.jvm.args}</argLine>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                        --add-opens java.base/java.net=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
